<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/input_a_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/translate"
        app:layout_constraintEnd_toEndOf="@+id/tf1"
        app:layout_constraintStart_toStartOf="@+id/tf1"
        app:layout_constraintTop_toBottomOf="@+id/tf1" />

    <TextView
        android:id="@+id/tvWord"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/your_word"
        app:layout_constraintEnd_toEndOf="@+id/tf1"
        app:layout_constraintStart_toStartOf="@+id/tf1"
        app:layout_constraintTop_toBottomOf="@+id/btnTranslate" />



</androidx.constraintlayout.widget.ConstraintLayout>